# rusty-traders

./: .env.sample  .gitignore  Cargo.toml  README.md
src/: main.rs
src/partials/: hello.rs
src/space_traders/: agent.rs  utils.rs
templates/: base.html  hello.html
